--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,53 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+*.lcov
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor-specific
+.vscode/
+.idea/
+*.swp
+
+# Optional: React-specific cache
+.cache/
+.next/
+out/
+.parcel-cache/
+
+# Optional: Storybook
+storybook-static/
+
+# Optional: Mac .Trash folder
+.Trashes/
+
+# Optional: npm lock file if using yarn, or vice versa
+package-lock.json
+# yarn.lock
+
